# ChangeLog for dev-lang/ruby
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/ruby/ChangeLog,v 1.424 2009/10/12 23:10:05 jer Exp $

*ruby-1.8.7_p249

  08 Mary 2010; Daniel Robbins <drobbins@funtoo.org> +ruby-1.8.7_p249.ebuild:
  Latest 1.8.7 from Gentoo.

  12 Oct 2009; Jeroen Roovers <jer@gentoo.org> ruby-1.8.7_p174-r1.ebuild:
  Stable for HPPA (bug #288699).

  12 Oct 2009; Jeroen Roovers <jer@gentoo.org> ruby-1.9.1_p243.ebuild:
  Marked ~hppa too.

*ruby-1.8.7_p174-r1 (06 Oct 2009)

  06 Oct 2009; Alex Legler <a3li@gentoo.org> +ruby-1.8.7_p174-r1.ebuild:
  Revision bump. Added fix for bug 168939 (ipv6), now uses the new
  eselect-ruby cleanup feature.

*ruby-1.9.1_p243 (09 Sep 2009)

  09 Sep 2009; Alex Legler <a3li@gentoo.org> -ruby-1.9.1_p129.ebuild,
  -ruby-1.9.1_p129-r1.ebuild, +ruby-1.9.1_p243.ebuild,
  -files/ruby-1.9.1_p129-gfbsd7.patch, -files/ruby19-rubygems-gentoo.patch,
  -files/ruby-1.9.1_p129-no-undefined-ext.patch,
  -files/ruby19-rubygems-proxy.patch,
  -files/ruby-1.9.1_p129-parallelmake.patch,
  -files/ruby19-mkmf-parallel-install.patch:
  Version bump. Fixing bugs 278899 by Daniel Robbins, 279825, 277210 and
  168939. Cleaning up old patches.

*ruby-1.8.6_p383 (20 Aug 2009)

  20 Aug 2009; Alex Legler <a3li@gentoo.org> +ruby-1.8.6_p383.ebuild:
  Patchlevel bump.

*ruby-1.9.1_p243-r1 (01 Aug 2009)
*ruby-1.9.1_p129-r2 (01 Aug 2009)

  01 Aug 2009; Daniel Robbins <drobbins@funtoo.org> +ruby-1.9.1_p129-r2.ebuild,
  +ruby-1.9.1_p243-r1.ebuild: Add missing patches to p243, adding compat symlinks
  for ruby and gem.

  24 Jul 2009; Daniel Robbins <drobbins@funtoo.org> ruby-1.9.1_p129-r1.ebuild,
  ruby-1.9.1_p243.ebuild: added second parallel make fix from
  http://osdir.com/ml/ruby-core/2009-02/msg00284.html

*ruby-1.9.1_p243 (23 Jul 2009)

  23 Jul 2009; Daniel Robbins <drobbins@funtoo.org> +ruby-1.9.1_p243.ebuild:
  new ebuild, masked temporarily, will unmask in a bit.
