@@ -12,17 +12,20 @@ AUX ruby19-rubygems-proxy.patch 407 RMD160 0bfedce42f4879d729b8de650f99a345faaa7
 DIST ruby-1.8.6-p369.tar.bz2 3981771 RMD160 34d2763fd7b24c5883eaea457b871708d20c51e8 SHA1 d121f84b1b264f3a72878797222852b272a099fd SHA256 fb6974ab8a0de52511e846eacf113432b5227a867e3c9741d65775f162e13715
 DIST ruby-1.8.6-p383.tar.bz2 3981736 RMD160 d7240d4589d3c15c69ae03ffcfbfae1b650911d3 SHA1 225a28956406b3bd8c5839a391131936ddce4eb9 SHA256 c39dd7e211cb7245d08d9a7a3d4fe0c7b9f796a4bed9f92fed500ad58bb53d1a
 DIST ruby-1.8.7-p249.tar.bz2 4153461 RMD160 96b238bd7194652ec194a505c2e5911441c5c5ee SHA1 2947f21f22e9345a3e94d84e6f88e7d0fc98a871 SHA256 8b89448fc79df6862660e9f77e884f06c76da28f078d8edd2f17567a615f3af5
+DIST ruby-1.8.7-p299.tar.bz2 4183359 RMD160 0ea4a05f439b6a2cf4bf53339df48aed329f9e43 SHA1 9c66c6ee21d427b5f3183b6c42beb02aa8618cef SHA256 3d8a1e4204f1fb69c9e9ffd637c7f7661a062fc2246c559f25fda5312cfd65d8
 DIST ruby-1.9.1-p129.tar.bz2 7183891 RMD160 570f567508f9a4ee41e7983ab0a399cbd1a47b8a SHA1 4e36be3bea89c17e2c7e908d5b18bf6071cc91c0 SHA256 cb730f035aec0e3ac104d23d27a79aa9625fdeb115dae2295de65355f449ce27
 DIST ruby-1.9.1-p243.tar.bz2 7191348 RMD160 3af130d692f9813501ccc570d6492b8003b1e6f9 SHA1 f9ec27a17d4f2f5be000d1bd46170344be0b6dfb SHA256 39c9850841c0dd5d368f96b854f97c19b21eb28a02200f8b4e151f608092e687
 DIST ruby-patches-1.8.6_p383.tar.bz2 3334 RMD160 8f336d3791137615feb4e470b6b6e25ca69b2859 SHA1 e5d5e617a152630a3c29ac74ae26890d76624213 SHA256 50b8ee2f1da7179783c5d8074e5444c9c067740b2da472bf40366f94bf2cdf32
 DIST ruby-patches-1.8.7_p249.tar.bz2 1499 RMD160 98670658db00a1c4ad563e68bf25263fd7f317fd SHA1 d371f7f25a75ac8626e2e87a570bb52a60579fb8 SHA256 b35ba05fb07c0264a9232e756cd80ff7f284fb8aa464368ce028d67fa11f31af
+DIST ruby-patches-1.8.7_p299.tar.bz2 1781 RMD160 edf80f6ea3809b3a9f2e697b8f78baeb5df2e346 SHA1 29743874ace02f75dc4e1fcf4516cfac589748b3 SHA256 83931a1d9d59a307cf5b173e7b4235a8606f61c86636e6e489f4da15bde8110d
 DIST ruby-patches-1.9.1_p243.tar.bz2 2460 RMD160 06f23fc2c3483cb3f552eabaa4fe22624522c6cc SHA1 7d32d38f8bccd1e230231091cfd161768624ab78 SHA256 5d9e1b8a61c9f08230e05ec91802adbee437f91ac772f679200815c1ee1a3f30
 EBUILD ruby-1.8.6_p369.ebuild 5427 RMD160 c6104f669da04975fdd8c611f05e49352b4445da SHA1 45f53238f2bd5fec0cbdd23be204022930d29f0b SHA256 6bc5f207702ede7cd9452fc584e99fec9f37ef7bcca37ded61195fc266731f37
 EBUILD ruby-1.8.6_p383.ebuild 5307 RMD160 ca0b664ae5e165aec90990f2e335c8531d14b559 SHA1 b9a2e0b4c16bbd26414a1a6016c7d62376e9c4a9 SHA256 045fa781ea8a0c1427a14c573448e26aedd6d256c721c6e1aa3a5698abc679e6
 EBUILD ruby-1.8.7_p249.ebuild 5344 RMD160 daf99ed150004e6599f7382bc4faa75c3145f8e6 SHA1 fe213d1de7cb9ac8367d9e0b0beab76737587b9b SHA256 f312b5988ad4f2168b271d363d01d453bdda76f6e4b53add9e387688fdddbbda
+EBUILD ruby-1.8.7_p299.ebuild 5584 RMD160 2d8a88f209c597f3feaf81b1a51a647c949e8b9b SHA1 0d0578904d0efb533e4ec7d05874aa7ab7ddff69 SHA256 b9c56396c90bb0619ae048d5c55bc946bf17dd16ebccd09867e4b9bbe0f9e66c
 EBUILD ruby-1.9.1_p129-r1.ebuild 5763 RMD160 3190a620cba4a3dd146fd22315170abfec96a724 SHA1 ee3c87fbb3118006db775e9f11dd444c32e3474a SHA256 1b07a8ade264dc48c54968d102ed753b95f60726fa4ca4db4c6583e25e603faa
 EBUILD ruby-1.9.1_p129-r2.ebuild 5824 RMD160 7db4498a2d834c5fa4ed22f1a645dce4baa77e6e SHA1 b1edaeedfc83fdfbf211ad6d6fc0a953ddc84519 SHA256 60ff0bdd0d406b04c7ae241820cdc21308835f84398f1ae474261c02bd883e21
 EBUILD ruby-1.9.1_p243-r1.ebuild 5708 RMD160 05cf251afc536390fbe28ad4faa9fb5f8c648097 SHA1 85fa684fbeed5899095f9319da5d252f8010645c SHA256 1ead0396b89a4e6cfec17ef1d7d1465210b28a5dced9bf1472ca442a0276293c
 EBUILD ruby-1.9.1_p243.ebuild 5497 RMD160 9db9da631e007585ab84671e76bcc9a11f9605d8 SHA1 bb7de8ddae0384fba148ead615fe306ed4d69ba3 SHA256 366d33e7d0d5d0bab6a8e744c85b6ea0b6fb886b75c7ae029a8e04cb0faad783
-MISC ChangeLog 66208 RMD160 64d6c31829511897616e44420e4feb5db2bf46f8 SHA1 ddab771089107758c6f1206f7bebd88060c0a405 SHA256 e1794f198333605dc6bef1284e9df6b78aa2210699000f90471868f5e7072bfe
+MISC ChangeLog 66372 RMD160 644359987c4b9eae477a93bb14f61c939ec593e8 SHA1 2632bd58c07b6306d9cd162c908bed3a42080c44 SHA256 6a07f85eed115a19e3d2989b1618a928b5c4509f3e9c7e7ae120135f1c727a41
 MISC metadata.xml 264 RMD160 431f9cb912904a43270caa28a6811a717d8a954e SHA1 9f11bb2cd7f7c1b586abf2b3d7a15b9156ed5bf8 SHA256 18838bb6849b82154fd830eb56e098c356421ac47e902ed33a886e26354d027b
